openshift/apps/sauron/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sauron
  labels:
    app: sauron
    openshift.io/cluster-monitoring: "false"
    #pod-security.kubernetes.io/enforce: privileged
    #pod-security.kubernetes.io/audit: privileged
    #pod-security.kubernetes.io/warn: privileged
