openshift/apps/sauron/deployment-latest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sauron
  namespace: sauron
  labels:
    app: sauron
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: sauron
  replicas: 1
  template:
    metadata:
      labels:
        app: sauron
    spec:
      volumes:
        - name: s3-credentials
          secret:
            secretName: s3-credentials
        - name: shared-data
          emptyDir: {}
      containers:
        - name: sauron
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: '500m'
              memory: 500Mi
          image: quay.io/kenmoini/sauron:latest
          ports:
            - containerPort: 6669
              protocol: TCP
          volumeMounts:
            - name: s3-credentials
              mountPath: "/var/run/s3-credentials"
              readOnly: true
            - name: shared-data
              mountPath: "/shared-data"
              readOnly: false

        - name: uruhara
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
              nvidia.com/gpu: 1
            requests:
              cpu: '500m'
              memory: 500Mi
              nvidia.com/gpu: 1
          image: quay.io/kenmoini/uruhara:latest
          ports:
            - containerPort: 8777
              protocol: TCP
          volumeMounts:
            - name: shared-data
              mountPath: "/shared-data"
              readOnly: false
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
