openshift/apps/sauron/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sauron
  namespace: sauron
  labels:
    app: sauron
spec:
  selector:
    matchLabels:
      app: sauron
  replicas: 1
  template:
    metadata:
      labels:
        app: sauron
    spec:
      containers:
        - name: sauron
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: '500m'
              memory: 500Mi
          image: quay.io/kenmoini/sauron:c79b61910443d55695b3836bc9fa2e2d2a403cff
          ports:
            - containerPort: 6669
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
